syntax = "proto2";
package fsmpb;

import "gogoproto/gogo.proto";

option go_package="./;fsmpb";
option (gogoproto.goproto_enum_prefix_all) = false;
option (gogoproto.goproto_unkeyed_all) = false;
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.goproto_sizecache_all) = false;

enum MessageType {
    MsgBeat         = 0;
    MsgHeartbeat    = 1;
    MsgReqArbit     = 2;
    MsgReqArbitResp = 3;
    MsgReleaseArbit = 4;
    MsgMemberAdd    = 5;
    MsgMemberAddResp= 6;
}

enum StateType {
    DualRunning =0;
	FaultPending =1;
	RecoveryPending =2;
	SingleRunning =3;
	EtcdStoped =4;
}

message Message {
	optional MessageType type                = 1  [(gogoproto.nullable) = false];
    optional StateType      state               = 3  [(gogoproto.nullable) = false];
}